<resources>
    <string name="app_name">Sonar</string>
    <string name="toolbar">@string/app_name</string>
    <string name="send">Send message</string>
    <string name="save">Save</string>
    <string name="mainText">Add new friends with the plus button!</string>
    <string name="colourTo">Them</string>
    <string name="colourFrom">You</string>
    <string name="colourBack">Background</string>
    <string name="colourDialog">Theme chooser</string>
    <string name="menuColour">Change theme</string>
    <string name="menuProfile">Update Profile</string>
    <string name="buttonScan">Scan a friends QR code</string>
    <string name="buttonShare">Share your QR code</string>
    <string name="scanText">Have your friend scan this QR code</string>

    <string name="scanTitle">Steps to add a friend</string>
    <string name="scan1">1. Scan your friends QR code</string>
    <string name="scan2">2. Have your friend scan your QR code</string>
    <string name="scan3">3. You can now send messages to each other!</string>

    <string name="toolbarScanner">Add friends</string>
    <string name="splashIcon">Please choose a profile icon</string>
    <string name="splashWelcome">Welcome to Sonar!</string>
    <string name="splashWelcomeDesc">The decentralised secure messaging application</string>
    <string name="splashWelcomeBut">Get Started</string>
    <string name="splashSecurity">Protect your messages with a pin and/or fingerprint</string>
    <string name="splashFingerButton">Allow Fingerprint usage</string>
    <string name="splashProfile">Setup your profile details</string>
    <string name="splashSkip">Skip</string>
    <string name="splashHint">Username</string>
    <string name="splashChosen">Icon chosen</string>
    <string name="channelName">Sonar-Channel-Name</string>
    <string name="channelDesc">Sonar-Channel-Desc</string>
    <string name="lockMain">Sonar is locked</string>
    <string name="lockMain2">Login with PIN or Fingerprint</string>
    <string name="lockSec">Attempts Remaining: </string>
    <string name="lockBut">Unlock</string>
    <string name="lockButSensor">Re-Activate Fingerprint Sensor</string>
    <string name="settingPassword">Protect Sonar with a PIN</string>
    <string name="settingPinBut">Change PIN</string>
    <string name="settingFinger">Allow fingerprint unlocking</string>




    <!-- For pin.xml -->
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="back">Back</string>
    <string name="clear">Clear</string>

</resources>
