<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtSplashPin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorTextDark"
        android:textSize="32sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/splashBtn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/pin_background"
            android:foreground="@drawable/ripple"
            android:onClick="pinPad"
            android:text="@string/one"
            android:textSize="18sp" />

        <Button
            android:id="@+id/splashBtn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/pin_background"
            android:foreground="@drawable/ripple"
            android:onClick="pinPad"
            android:text="@string/two"
            android:textSize="18sp" />

        <Button
            android:id="@+id/splashBtn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/pin_background"
            android:foreground="@drawable/ripple"
            android:onClick="pinPad"
            android:text="@string/three"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/splashBtn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/pin_background"
            android:foreground="@drawable/ripple"
            android:onClick="pinPad"
            android:text="@string/four"
            android:textSize="18sp" />

        <Button
            android:id="@+id/splashBtn5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/pin_background"
            android:foreground="@drawable/ripple"
            android:onClick="pinPad"
            android:text="@string/five"
            android:textSize="18sp" />

        <Button
            android:id="@+id/splashBtn6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/pin_background"
            android:foreground="@drawable/ripple"
            android:onClick="pinPad"
            android:text="@string/six"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/splashBtn7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/pin_background"
            android:foreground="@drawable/ripple"
            android:onClick="pinPad"
            android:text="@string/seven"
            android:textSize="18sp" />

        <Button
            android:id="@+id/splashBtn8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/pin_background"
            android:foreground="@drawable/ripple"
            android:onClick="pinPad"
            android:text="@string/eight"
            android:textSize="18sp" />

        <Button
            android:id="@+id/splashBtn9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/pin_background"
            android:foreground="@drawable/ripple"
            android:onClick="pinPad"
            android:text="@string/nine"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/splashBtnB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/pin_background"
            android:foreground="@drawable/ripple"
            android:onClick="pinPad"
            android:text="@string/back"
            android:textSize="18sp" />

        <Button
            android:id="@+id/splashBtn0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/pin_background"
            android:foreground="@drawable/ripple"
            android:onClick="pinPad"
            android:text="@string/zero"
            android:textSize="18sp" />

        <Button
            android:id="@+id/splashBtnC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/pin_background"
            android:foreground="@drawable/ripple"
            android:onClick="pinPad"
            android:text="@string/clear"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>